testsuite/tests/rename/should_fail/T13839b.stderr

T13839b.hs:1:1: error:
    The IO action ‘main’ is not defined in module ‘Main’
